--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet test ./src/Solution.sln
     
     - name: Pack
-      run: dotnet pack ./src/Solution.sln --configuration Release --output ./packages
+      run: dotnet pack ./src/Swanker.sln --configuration Release --output ./packages
 
     - name: Publish      
       run: dotnet nuget push ./packages/**/*.nupkg --no-symbols true --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }}
